...

        profilePhoto.layer.masksToBounds = true
        profilePhoto.layer.cornerRadius = 35
        profilePhoto.contentMode = .scaleAspectFill
        profilePhoto.clipsToBounds = true

        usernameLabel.text = "username"
        usernameLabel.font = UIFont.systemFont(ofSize: 23, weight: .bold)
        usernameLabel.textColor = .ypWhite

        userTagLabel.text = "@usernametag"
        userTagLabel.font = UIFont.systemFont(ofSize: 13, weight: .regular)
        userTagLabel.textColor = .ypGray
...
        profilePhoto.kf.indicatorType = .activity

        logoutButton.setImage(UIImage(resource: .logout), for: .normal)
        logoutButton.tintColor = .ypRed
        logoutButton.contentHorizontalAlignment = .right
        logoutButton.addTarget(self, action: #selector(logout), for: .touchUpInside)
        logoutButton.accessibilityIdentifier = "logout button"
        // Set constraint
        NSLayoutConstraint.activate([
            profilePhoto.widthAnchor.constraint(equalToConstant: 70),
            profilePhoto.heightAnchor.constraint(equalToConstant: 70),
            profilePhoto.leadingAnchor.constraint(equalTo: view.safeAreaLayoutGuide.leadingAnchor, constant: 16),
            profilePhoto.topAnchor.constraint(equalTo: view.safeAreaLayoutGuide.topAnchor, constant: 32),
...
