...
        presenter?.viewDidLoad()
    }

    private func setUpView() {
        view.backgroundColor = UIColor(resource: .ypWhite)
        OAuthWebView.navigationDelegate = self
        OAuthWebView.accessibilityIdentifier = "Unsplash"
        progressView.progressTintColor = UIColor(resource: .ypBlack)

        progressView.translatesAutoresizingMaskIntoConstraints = false
        OAuthWebView.translatesAutoresizingMaskIntoConstraints = false

        view.addSubview(OAuthWebView)
...
