...
        loginButton.titleLabel?.font = .boldSystemFont(ofSize: 17)
        loginButton.backgroundColor = UIColor(resource: .ypWhite)
        loginButton.tintColor = UIColor(resource: .ypBlack)
        loginButton.addTarget(self, action: #selector(showWebView(_:)), for: .touchUpInside)
        loginButton.layer.masksToBounds = true
        loginButton.layer.cornerRadius = 16
        loginButton.accessibilityIdentifier = "Login"

        logoImageView.translatesAutoresizingMaskIntoConstraints = false
        loginButton.translatesAutoresizingMaskIntoConstraints = false

        view.addSubview(logoImageView)
        view.addSubview(loginButton)
...
