...
        tableDataLabel.font = .systemFont(ofSize: 13)
        tableDataLabel.textColor = UIColor(resource: .ypWhite)
        // likeButton settings
        tableLikeButton.setImage(UIImage(resource: .noActive), for: .normal)
        tableLikeButton.tintColor = .ypWhite
        tableLikeButton.addTarget(self, action: #selector(likeButtonClicked), for: .touchUpInside)
        tableLikeButton.accessibilityIdentifier = "likeButton"
        //
        contentView.sendSubviewToBack(tableImageView)

        // layout
        NSLayoutConstraint.activate([
            tableImageView.leadingAnchor.constraint(equalTo: contentView.leadingAnchor, constant: 16),
...
